Update avatar saving
