# src/main/resources/static/swagger-config.yaml
@@ -510,9 +510,9 @@ paths:
               schema:
                 type: object
                 properties:
-                  picture:
+                  userPicture:
                     type: string
-                    format: byte
+                    format: base64
         '204':
           description: No content, if the user has no picture
         '400':
@@ -533,7 +533,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-
     post:
       tags:
         - user info
@@ -550,10 +549,10 @@ paths:
       requestBody:
         required: true
         content:
-          application/json:
+          text/plain:
             schema:
               type: string
-              format: binary
+              description: Base64-encoded string of the user picture
       responses:
         '200':
           description: Picture successfully added or updated.
@@ -575,7 +574,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-
     delete:
       tags:
         - user info
